<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/archivedToDoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/archivedToDo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/archiveEmailButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/email" />

    <Button
        android:id="@+id/archiveReturnButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/archiveEmailButton"
        android:layout_alignBottom="@+id/archiveEmailButton"
        android:layout_toLeftOf="@+id/archiveEmailButton"
        android:text="@string/archivedReturn" />

    <Button
        android:id="@+id/archiveDeleteButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/archiveEmailButton"
        android:layout_alignBottom="@+id/archiveEmailButton"
        android:layout_toRightOf="@+id/archiveEmailButton"
        android:text="@string/delete" />

    <ListView
        android:id="@+id/archivedListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/archiveEmailButton"
        android:layout_alignLeft="@+id/archivedToDoText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/archivedToDoText" >

    </ListView>

</RelativeLayout>