<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.ualberta.ca.jdemery_todo.MainActivity" >

    <TextView
        android:id="@+id/viewToDoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/emailButton"
        android:text="@string/to_do_list"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/deleteButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:layout_toRightOf="@+id/emailButton"
        android:text="@string/delete" />

    <Button
        android:id="@+id/emailButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deleteButton"
        android:layout_alignBottom="@+id/deleteButton"
        android:layout_toRightOf="@+id/archiveButton"
        android:text="@string/email" />

    <Button
        android:id="@+id/archiveButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailButton"
        android:layout_alignBottom="@+id/emailButton"
        android:layout_toRightOf="@+id/addButton"
        android:text="@string/archive" />

    <Button
        android:id="@+id/addButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/add" />

    <EditText
        android:id="@+id/addToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deleteButton"
        android:layout_alignLeft="@+id/addButton"
        android:layout_alignRight="@+id/deleteButton"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/todoListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addToDo"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/viewToDoList" >

    </ListView>

    <TextView
        android:id="@+id/counters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/viewToDoList"
        android:layout_toRightOf="@+id/emailButton"
        android:text="TextView" />

</RelativeLayout>